test/types/scalar/bradc/valAsType.good
valAsType.chpl:1: error: invalid type specification
valAsType.chpl:2: error: invalid type specification
